# OB1-Radar

./: .context.md  .env.example  .gitignore  CNAME  README.md  README_OB1_PRODUCT.md  deploy.sh  ecosystem.md  index.html  main.py  requirements.txt  run.py  setup_web.py  vercel.json
.github/: PULL_REQUEST_TEMPLATE.md
api/: accountability.py  checkout.py  server.py  teaser.py
content/: daily_kickoff-2025-09-18.md  post_template_bilingual.md
core/: analysis.py  config.py  engine.py
data/: cache_seen.json  sample_weekend_signals.json
docs/: accountability.html  daily-2025-08-12.json  daily-2025-08-13.json  daily-2025-08-14.json  daily-2025-08-15.json  daily-2025-08-16.json  daily-2025-08-17.json  daily-2025-08-18.json  daily-2025-08-19.json  daily-2025-08-20.json  daily-2025-08-21.json  daily-2025-08-22.json  daily-2025-08-23.json  daily-2025-08-24.json  daily-2025-08-25.json  (+65 more)
oriundi-radar/: .gitignore  README.md  pyproject.toml
oriundi-radar/config/: settings.example.toml
oriundi-radar/data/: historical_callups.sample.csv
oriundi-radar/docs/: oriundi_architecture.md
oriundi-radar/src/oriundi/: __init__.py  cli.py  config.py  pipeline.py
oriundi-radar/src/oriundi/data_sources/: __init__.py  base.py  historical.py  open_registry.py  web_search.py
oriundi-radar/src/oriundi/enrichment/: __init__.py  nlp.py  social.py
oriundi-radar/src/oriundi/graph/: __init__.py  builder.py
oriundi-radar/src/oriundi/processing/: __init__.py  entity_resolution.py  normalization.py
oriundi-radar/tests/: conftest.py  test_historical_source.py  test_pipeline.py
(+39 files in other folders)
